--- a/src/app.css
+++ b/src/app.css
@@ -1,23 +1,5 @@
-@import "variables";
-@import "utilities";
-@import "game";
-
-:root {
-  font-family: "Nunito Sans", sans-serif;
-  color: black;
-  font-size: 14px;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  background-color: $lightest-gray;
+  background-color: var(--lightest-gray);
 }
 
 header.header {
@@ -29,6 +11,11 @@ header.header {
   color: white;
 }
 
+.title {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
 .app-container {
   display: flex;
   flex-direction: row;
@@ -37,10 +24,8 @@ header.header {
   min-height: 87vh;
 }
 
-.events-container,
-.chat-container {
-  min-width: 10vw;
-  border: 1px solid black;
+.game-container {
+  padding: 0.5rem;
 }
 
 footer.footer {
@@ -48,13 +33,9 @@ footer.footer {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background-color: $background-color;
+  background-color: var(--background-color);
   color: white;
   font-size: 0.8rem;
   padding: 0 1rem;
 }
 
-.title {
-  font-size: 2.5rem;
-  font-weight: 600;
-}
