--- a/src/components/Player/PlayerCardTable.module.css
+++ b/src/components/Player/PlayerCardTable.module.css
@@ -39,16 +39,18 @@
   margin-right: 1rem;
 }
 
-.draw-pile:hover {
-  cursor: pointer;
-}
-
 .draw-pile img {
   width: 100%;
   transition: transform 0.2s ease-in-out;
 }
 .draw-pile img:hover {
+  cursor: pointer;
   transform: scale(1.05);
+}
+
+.draw-pile.inactive img:hover {
+  cursor: not-allowed;
+  transform: none;
 }
 
 .discard-pile {
