Remove notifications, refactor getMarbles

--- a/src/app.css
+++ b/src/app.css
@@ -24,13 +24,19 @@ header.header {
   min-height: 87vh;
 }
 
+.events-container {   
+  border-right: 1px solid var(--background-color);
+}
+
+.chat-container {   
+  border-left: 1px solid var(--background-color);
+}
+
 .events-container, .chat-container {
-  border: 1px solid black;
   width: 15vw;
   overflow-y: auto;
   scrollbar-width: thin;
   height: 87vh;
-  padding: .3em 0 .3em .3em
 }
 
 .game-container {
